<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AI Agent</string>
    <string name="chat_hint">Type your message here...</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="select_topic">Select Topic</string>
    <string name="use_multiple_agents">Use Multiple Agents</string>
    <string name="processing">Processing...</string>
    <string name="error_empty_message">Please enter a message</string>
    <string name="agent_settings">Agent Settings</string>
</resources>